# MicrosoftInnovationChallange25--ROI-Calculator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: master_roivision.yml
src/: app.py
